GSettings: g_warning() on failure to communicate

When we have a failure to deliver requests to the dconf backend, give a
g_warning().

https://bugzilla.gnome.org/show_bug.cgi?id=641768